force-app/main/default/objects/Log_Detail__c/fields/Aggregate_Queries_Invocation__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Queries_Invocation__c</fullName>
    <formula>IF( (  Aggregate_Queries__c /  Aggregate_Queries_Limit__c )*100 &lt;= 80 , &quot;✅&quot; ,
IF(( Aggregate_Queries__c / Aggregate_Queries_Limit__c )*100 &gt; 80 &amp;&amp; ( Aggregate_Queries__c / Aggregate_Queries_Limit__c )*100 &lt; 90, &quot;⚠️&quot; , &quot;⛔&quot; ) ) + &quot; &quot; +

TEXT( ROUND(( Aggregate_Queries__c / Aggregate_Queries_Limit__c )*100, 2 )) + &quot;% (&quot; + TEXT( Aggregate_Queries__c ) + &quot; / &quot; + TEXT( Aggregate_Queries_Limit__c ) + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used.</inlineHelpText>
    <label>Aggregate Queries</label>
    <type>Text</type>
</CustomField>