force-app/main/default/objects/Log_Detail__c/fields/Apex_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Apex_Log_Id__c</fullName>
    <label>Apex Log Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>