force-app/main/default/objects/Log_Detail__c/fields/Async_Calls__c.field-meta.xml
<CustomField>
    <fullName>Async_Calls__c</fullName>
    <label>Async Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>