force-app/main/default/objects/Log_Detail__c/fields/Callouts_Invocation__c.field-meta.xml
<CustomField>
    <fullName>Callouts_Invocation__c</fullName>
    <formula>IF( (  Callouts__c /  Callouts_Limit__c )*100 &lt;= 80 , &quot;✅&quot; ,
IF(( Callouts__c / Callouts_Limit__c )*100 &gt; 80 &amp;&amp; ( Callouts__c / Callouts_Limit__c )*100 &lt; 90, &quot;⚠️&quot; , &quot;⛔&quot; ) ) + &quot; &quot; +

TEXT( ROUND(( Callouts__c / Callouts_Limit__c )*100, 2 )) + &quot;% (&quot; + TEXT( Callouts__c ) + &quot; / &quot; + TEXT( Callouts_Limit__c ) + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used.</inlineHelpText>
    <label>Callouts</label>
    <type>Text</type>
</CustomField>