force-app/main/default/objects/Log_Detail__c/fields/CPU_Time_Invocation__c.field-meta.xml
<CustomField>
    <fullName>CPU_Time_Invocation__c</fullName>
    <formula>IF( (  CPU_Time__c /  CPU_Time_Limit__c )*100 &lt;= 80 , &quot;✅&quot; ,
IF(( CPU_Time__c / CPU_Time_Limit__c )*100 &gt; 80 &amp;&amp; ( CPU_Time__c / CPU_Time_Limit__c )*100 &lt; 90, &quot;⚠️&quot; , &quot;⛔&quot; ) ) + &quot; &quot; +

TEXT( ROUND(( CPU_Time__c / CPU_Time_Limit__c )*100, 2 )) + &quot;% (&quot; + TEXT( CPU_Time__c ) + &quot; / &quot; + TEXT( CPU_Time_Limit__c ) + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used.</inlineHelpText>
    <label>CPU Time</label>
    <type>Text</type>
</CustomField>