force-app/main/default/objects/Log_Detail__c/fields/CPU_Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>CPU_Time_Limit__c</fullName>
    <label>CPU Time Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>