force-app/main/default/objects/Log_Detail__c/fields/DML_Rows_Limit__c.field-meta.xml
<CustomField>
    <fullName>DML_Rows_Limit__c</fullName>
    <label>DML Rows Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>