force-app/main/default/objects/Log_Detail__c/fields/DML_Statements__c.field-meta.xml
<CustomField>
    <fullName>DML_Statements__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DML Statements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>