force-app/main/default/objects/Log_Detail__c/fields/Email_Invocations_Invocation__c.field-meta.xml
<CustomField>
    <fullName>Email_Invocations_Invocation__c</fullName>
    <formula>IF( (  Email_Invocations__c /  Email_Invocations_Limit__c )*100 &lt;= 80 , &quot;✅&quot; ,
IF(( Email_Invocations__c / Email_Invocations_Limit__c )*100 &gt; 80 &amp;&amp; ( Email_Invocations__c / Email_Invocations_Limit__c )*100 &lt; 90, &quot;⚠️&quot; , &quot;⛔&quot; ) ) + &quot; &quot; +

TEXT( ROUND(( Email_Invocations__c / Email_Invocations_Limit__c )*100, 2 )) + &quot;% (&quot; + TEXT( Email_Invocations__c ) + &quot; / &quot; + TEXT( Email_Invocations_Limit__c ) + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used.</inlineHelpText>
    <label>Email Invocations</label>
    <type>Text</type>
</CustomField>