force-app/main/default/objects/Log_Detail__c/fields/Email_Invocations_Limit__c.field-meta.xml
<CustomField>
    <fullName>Email_Invocations_Limit__c</fullName>
    <label>Email Invocations Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>