force-app/main/default/objects/Log_Detail__c/fields/Future_Calls_Invocation__c.field-meta.xml
<CustomField>
    <fullName>Future_Calls_Invocation__c</fullName>
    <formula>IF( (  Future_Calls__c /  Future_Calls_Limit__c )*100 &lt;= 80 , &quot;✅&quot; ,
IF(( Future_Calls__c / Future_Calls_Limit__c )*100 &gt; 80 &amp;&amp; ( Future_Calls__c / Future_Calls_Limit__c )*100 &lt; 90, &quot;⚠️&quot; , &quot;⛔&quot; ) ) + &quot; &quot; +

TEXT( ROUND(( Future_Calls__c / Future_Calls_Limit__c )*100, 2 )) + &quot;% (&quot; + TEXT( Future_Calls__c ) + &quot; / &quot; + TEXT( Future_Calls_Limit__c ) + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used.</inlineHelpText>
    <label>Future Calls</label>
    <type>Text</type>
</CustomField>