force-app/main/default/objects/Log_Detail__c/fields/Heap_Size__c.field-meta.xml
<CustomField>
    <fullName>Heap_Size__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Heap Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>