force-app/main/default/objects/Log_Detail__c/fields/Heap_Size_Invocation__c.field-meta.xml
<CustomField>
    <fullName>Heap_Size_Invocation__c</fullName>
    <formula>IF( (  Heap_Size__c /  Heap_Size_Limit__c  )*100 &lt;= 80 , &quot;✅&quot; ,
IF(( Heap_Size__c / Heap_Size_Limit__c  )*100 &gt; 80 &amp;&amp; ( Heap_Size__c / Heap_Size_Limit__c  )*100 &lt; 90, &quot;⚠️&quot; , &quot;⛔&quot; ) ) + &quot; &quot; +
 
TEXT( ROUND(( Heap_Size__c / Heap_Size_Limit__c  )*100,2 )) + &quot;% (&quot; + TEXT( Heap_Size__c ) + &quot; / &quot; + TEXT( Heap_Size_Limit__c  ) + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used.</inlineHelpText>
    <label>Heap Size</label>
    <type>Text</type>
</CustomField>