force-app/main/default/objects/Log_Detail__c/fields/Log_File_Status__c.field-meta.xml
<CustomField>
    <fullName>Log_File_Status__c</fullName>
    <inlineHelpText>The reason why the log file was not generated.</inlineHelpText>
    <label>Log File Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>