force-app/main/default/objects/Log_Detail__c/fields/Log_Length__c.field-meta.xml
<CustomField>
    <fullName>Log_Length__c</fullName>
    <label>Log Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>