force-app/main/default/objects/Log_Detail__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; +  User__r.ProfileId , User__r.Profile.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile</label>
    <type>Text</type>
</CustomField>