force-app/main/default/objects/Log_Detail__c/fields/Query_Locator_Rows_Invocation__c.field-meta.xml
<CustomField>
    <fullName>Query_Locator_Rows_Invocation__c</fullName>
    <formula>IF( (  Query_Locator_Rows__c /  Query_Locator_Rows_Limit__c )*100 &lt;= 80 , &quot;✅&quot; ,
IF(( Query_Locator_Rows__c / Query_Locator_Rows_Limit__c )*100 &gt; 80 &amp;&amp; ( Query_Locator_Rows__c / Query_Locator_Rows_Limit__c )*100 &lt; 90, &quot;⚠️&quot; , &quot;⛔&quot; ) ) + &quot; &quot; +

TEXT( ROUND(( Query_Locator_Rows__c / Query_Locator_Rows_Limit__c )*100, 2 )) + &quot;% (&quot; + TEXT( Query_Locator_Rows__c ) + &quot; / &quot; + TEXT( Query_Locator_Rows_Limit__c ) + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used.</inlineHelpText>
    <label>Query Locator Rows</label>
    <type>Text</type>
</CustomField>