force-app/main/default/objects/Log_Detail__c/fields/Query_Locator_Rows_Limit__c.field-meta.xml
<CustomField>
    <fullName>Query_Locator_Rows_Limit__c</fullName>
    <label>Query Locator Rows Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>