force-app/main/default/objects/Log_Detail__c/fields/Queueable_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Queueable_Jobs__c</fullName>
    <label>Queueable Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>