force-app/main/default/objects/Log_Detail__c/fields/Queueable_Jobs_Invocation__c.field-meta.xml
<CustomField>
    <fullName>Queueable_Jobs_Invocation__c</fullName>
    <formula>IF( (  Queueable_Jobs__c /  Queueable_Jobs_Limit__c )*100 &lt;= 80 , &quot;✅&quot; ,
IF(( Queueable_Jobs__c/ Queueable_Jobs_Limit__c )*100 &gt; 80 &amp;&amp; ( Queueable_Jobs__c/ Queueable_Jobs_Limit__c )*100 &lt; 90, &quot;⚠️&quot; , &quot;⛔&quot; ) ) + &quot; &quot; +

TEXT( ROUND(( Queueable_Jobs__c/ Queueable_Jobs_Limit__c )*100, 2 )) + &quot;% (&quot; + TEXT( Queueable_Jobs__c) + &quot; / &quot; + TEXT( Queueable_Jobs_Limit__c ) + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used.</inlineHelpText>
    <label>Queueable Jobs</label>
    <type>Text</type>
</CustomField>