force-app/main/default/objects/Log_Detail__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
                <label>Request came from an API</label>
            </value>
            <value>
                <fullName>Application</fullName>
                <label>Request came from the Salesforce user interface</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>