force-app/main/default/objects/Log_Detail__c/fields/SOQL_Queries_Invocation__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Queries_Invocation__c</fullName>
    <formula>IF( ( SOQL_Queries__c /  SOQL_Queries_Limit__c )*100 &lt;= 80 , &quot;✅&quot; ,  
IF(( SOQL_Queries__c /  SOQL_Queries_Limit__c )*100 &gt; 80 &amp;&amp; ( SOQL_Queries__c /  SOQL_Queries_Limit__c )*100 &lt; 90, &quot;⚠️&quot; , &quot;⛔&quot; ) ) + &quot; &quot; + 

TEXT( ROUND(( SOQL_Queries__c / SOQL_Queries_Limit__c )*100, 2 )) + &quot;% (&quot; + TEXT( SOQL_Queries__c  ) + &quot; / &quot; + TEXT( SOQL_Queries_Limit__c ) + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used.</inlineHelpText>
    <label>SOQL Queries</label>
    <type>Text</type>
</CustomField>