force-app/main/default/objects/Log_Detail__c/fields/SOSL_Queries_Limit__c.field-meta.xml
<CustomField>
    <fullName>SOSL_Queries_Limit__c</fullName>
    <label>SOSL Queries Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>