force-app/main/default/objects/Log_Detail__c/fields/Total_ERROR_Entries__c.field-meta.xml
<CustomField>
    <fullName>Total_ERROR_Entries__c</fullName>
    <label>Total ERROR Entries</label>
    <summaryFilterItems>
        <field>Log_Entry__c.Level_Text__c</field>
        <operation>notEqual</operation>
        <value>DEBUG</value>
    </summaryFilterItems>
    <summaryForeignKey>Log_Entry__c.Log_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>