force-app/main/default/objects/Log_Detail__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + User__r.UserRole.Id, User__r.UserRole.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Role</label>
    <type>Text</type>
</CustomField>