force-app/main/default/objects/Log_Detail__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + User__r.Id,  User__r.Username )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Username</label>
    <type>Text</type>
</CustomField>