force-app/main/default/objects/Log_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Component_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Total_Entries__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>