force-app/main/default/objects/Log_Detail__c/listViews/Log_From_Flow.listView-meta.xml
<ListView>
    <fullName>Log_From_Flow</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Total_Entries__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Component_Type__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Log From Flow</label>
</ListView>